MTX-154
Implemented keepColumns compute