@@ -1,12 +1,8 @@
 package com.sentrysoftware.matrix.converter.state.computes.keepcolumns;
 
-import java.util.Collections;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import com.sentrysoftware.matrix.converter.state.IConnectorStateConverter;
-import com.sentrysoftware.matrix.converter.state.computes.common.ColumnProcessor;
 import com.sentrysoftware.matrix.converter.state.computes.common.ComputeTypeProcessor;
 
 import lombok.AccessLevel;
@@ -15,10 +11,13 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class ConnectorKeepColumnsProperty {
 
-	private static final String HDF_TYPE_VALUE = "";
-	private static final String YAML_TYPE_VALUE = "";
+	private static final String HDF_TYPE_VALUE = "KeepColumns";
+	private static final String YAML_TYPE_VALUE = "keepColumns";
 
 	public static Set<IConnectorStateConverter> getConnectorProperties() {
-		return Collections.emptySet();
+		return Set.of(
+				new ComputeTypeProcessor(HDF_TYPE_VALUE, YAML_TYPE_VALUE),
+				new ColumnNumbersProcessor()
+				);
 	}
 }
